Closed Bug 1541805 Opened 7 years ago Closed 7 years ago

Crash in [@ wasapi_init]

Categories

(Core :: Audio/Video: cubeb, defect, P2)

Unspecified
Windows 10
defect

Tracking

()

RESOLVED FIXED
mozilla68
Tracking Status
firefox-esr60 --- unaffected
firefox66 --- unaffected
firefox67 --- unaffected
firefox68 --- fixed

People

(Reporter: calixte, Assigned: padenot)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-512724ea-24a1-4d89-9a61-e59020190404.

Top 10 frames of crashing thread:

0 xul.dll wasapi_init media/libcubeb/src/cubeb_wasapi.cpp:1452
1 xul.dll cubeb_init media/libcubeb/src/cubeb.c:216
2 xul.dll static struct cubeb* mozilla::CubebUtils::GetCubebContextUnlocked dom/media/CubebUtils.cpp:467
3 xul.dll mozilla::CubebUtils::GetCubebContext dom/media/CubebUtils.cpp:302
4 xul.dll mozilla::CubebUtils::MaxNumberOfChannels dom/media/CubebUtils.cpp:614
5 xul.dll void mozilla::MediaStreamGraphImpl::MediaStreamGraphImpl dom/media/MediaStreamGraph.cpp:3152
6 xul.dll mozilla::MediaStreamGraph::CreateNonRealtimeInstance dom/media/MediaStreamGraph.cpp:3291
7 xul.dll mozilla::dom::AudioDestinationNode::Stream dom/media/webaudio/AudioDestinationNode.cpp:380
8 xul.dll void mozilla::dom::OscillatorNodeEngine::OscillatorNodeEngine dom/media/webaudio/OscillatorNode.cpp:44
9 xul.dll void mozilla::dom::OscillatorNode::OscillatorNode dom/media/webaudio/OscillatorNode.cpp:380

There are 3 crashes (from 1 installation) in nightly 68 with buildid 20190403204605. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1541101.

[1] https://hg.mozilla.org/mozilla-central/rev?node=0c6cffcbd368

Flags: needinfo?(achronop)

Matthew, the new assert in wasapi is being hit in the wild. Would you like to take a look? Maybe we need to abort if COM is not initialized.

Flags: needinfo?(achronop) → needinfo?(kinetik)

This path shouldn't happen I think. This is an OfflineAudioContext it seems, but we're reaching out to hardware. The assert added simply reveals an existing problem. I'm taking this, thanks for the analysis and filing Calixte.

Assignee: nobody → padenot

clearing the NI for kinetik, since the assert in cubeb did its job, but is merely a consequence of this bug.

Flags: needinfo?(kinetik)
Rank: 15
Priority: -- → P2
Pushed by padenot@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/e2bae3610871 Don't rely on the MSG to determine the number of channels to use, pass it instead. r=karlt
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: