Bug 1541805 - Don't rely on the MSG to determine the number of channels to use, pass it instead. r=karlt

Differential Revision: https://phabricator.services.mozilla.com/D26197